fixed footer alignment

--- a/PortfolioFiles/footersection.css
+++ b/PortfolioFiles/footersection.css
@@ -1,3 +1,50 @@
+.foot {
+					
+    text-align:center;
+    font-size:2.5rem;
+    font-family:var(--seriffont);
+    font-weight:normal;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: flex-end;
+    box-sizing:border-box;
+    padding-bottom:20px;
+    color:black;
+    margin-top:3em;
+    font-weight:bold;
+}
+
+.footbox {
+    display:flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width:550px;
+    margin-top:.2em;
+}
+
+.footinfo {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footinfo >a >img {
+    width:25px;
+    height:25px;
+    padding:16px;
+    border-radius: 50%;
+    background:#7301AB;
+}
+
+.footinfo >span {
+    font-size:1.2rem;
+    font-family: var(--spanfont);
+    margin-top:.3em;
+    font-weight:normal;
+}
+
+
 @media screen and (max-width: 1399px) {
 	
 }
@@ -20,16 +67,13 @@
     
     .footbox {
         display:flex;
-        width:auto;
         margin-top:.2em;
-        align-items:flex-start;
+        align-items:center;
         flex-direction: column;
         justify-content:center;
     }
     
     .footinfo {
-        display:flex;
-        flex-direction: row;
         align-items: center;
         margin-top:.6em;
     }
